ajout de la class .yellow

--- a/style.css
+++ b/style.css
@@ -6,7 +6,14 @@ cursor:default;
 font-family: 'Roboto', 'serif', cursive;
 }
 
-
+.yellow
+{
+color:yellow;
+font-size:1.5em;
+text-shadow:2px 1px 0px silver;
+font-style:normal;
+text-align:center;
+}
 
 .red
 {
