modification du style de police de la classe .yellow

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ font-family: 'Roboto', 'serif', cursive;
 color:yellow;
 font-size:1.5em;
 text-shadow:2px 1px 0px silver;
-font-style:normal;
+font-style:bold;
 text-align:center;
 }
 
